--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="./favicon.png" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="//shadow.elemecdn.com/npm/highlight.js@9.3.0/styles/color-brewer.css">
     <script src="//shadow.elemecdn.com/app/element/highlight.pack.b1f71b31-3c07-11e9-ba1a-55bba1877129.js"></script>
-    <script src="./project.js"></script>
+    <script src=".project.js"></script>
     <script>
         document.title = window.project.config.title
         document.querySelector('link[rel="icon"]').href = window.project.config.favicon
     </script>
 </head>
 <body>
-<noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript>
 <div id="app"></div>
-<!-- built files will be auto injected -->
+<script type="module" src="/src/main.js"></script>
 </body>
 </html>
